# gatewayops

./: .env.example  .gitignore  DEBT.md  Dockerfile.gateway  LICENSE  Makefile  PRODUCT_SPEC.md  README.md  TODO.md  docker-compose.yml  fly.gateway.toml  go.mod
.github/workflows/: publish-python.yml
cli/: go.mod
cli/cmd/gwo/: main.go
cli/internal/api/: client.go  types.go
cli/internal/cmd/: auth.go  costs.go  keys.go  mcp.go  root.go  traces.go  version.go
dashboard/: fly.toml  next.config.js  package-lock.json  package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/app/(dashboard)/: layout.tsx
dashboard/app/alerts/: page.tsx
dashboard/app/api-keys/: page.tsx
dashboard/app/costs/: page.tsx
dashboard/app/login/: layout.tsx  (+1 more)
dashboard/lib/: utils.ts
deployments/: docker-compose.yml
deployments/docker/: Dockerfile.gateway  Dockerfile.mock-mcp
docs/: ABOUT.md  DEPLOYMENT.md  GTM_CHECKLIST.md  LAUNCH_CONTENT.md  SDK_PUBLISHING.md  STANDARDS.md  TERMS.md  index.html
docs/openapi/: openapi.yaml
docs/specs/: AGENT_PLATFORM_INTEGRATION.md
gateway/: Dockerfile  fly.toml  go.mod  go.sum
gateway/migrations/: 001_initial_schema.sql  002_add_service_columns.sql
migrations/clickhouse/: 001_initial.sql
migrations/postgres/: 001_initial.sql  002_sso_rbac.sql  003_safety_approvals.sql  004_alerting.sql
scripts/: dev-setup.sh  generate-key.go
sdks/python/: README.md  pyproject.toml
sdks/python/gatewayops/: __init__.py  client.py  exceptions.py  types.py
sdks/python/tests/: __init__.py  test_client.py  test_exceptions.py  test_types.py
sdks/typescript/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
test/mock-mcp/: main.go
(+112 files in other folders)
