[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gatewayops"
version = "0.1.1"
description = "Official Python SDK for GatewayOps MCP Gateway"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "GatewayOps", email = "sdk@gatewayops.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["gatewayops", "mcp", "ai", "gateway", "sdk"]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "tenacity>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://gatewayops.com"
Documentation = "https://docs.gatewayops.com/sdk/python"
Repository = "https://github.com/akz4ol/gatewayops"
Changelog = "https://github.com/akz4ol/gatewayops/blob/main/sdks/python/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["gatewayops"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "UP"]

[tool.mypy]
python_version = "3.8"
strict = true
